gitops/components/service-mesh/database/base/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: tasklist-postgresql
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      name: postgresql
